moved jquery to js folder

--- a/manual9.html
+++ b/manual9.html
@@ -4,8 +4,8 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Service Level Agreement</title>
-    <script src="jquery-3.1.1.min.js"></script>
-    <script src="jquery.cookie.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.cookie.js"></script>
     <script src="js/aro8.js"></script>
     <script src="js/getAngle.js"></script>
     <script src="js/objects.js"></script>
