--- a/manual9.html
+++ b/manual9.html
@@ -304,6 +304,14 @@
 
 /* RESIZE inner nums*/
 
+    sw = window.innerWidth;
+    sh = window.innerHeight;
+    $('#centerNum').css('left',sw/2 - $('#centerNum').width()/2);
+    $('#centerNum').css('top',sh*0.65);
+
+    $('#centerLabel').css('left',sw/2 - $('#centerLabel').width()/2);
+    $('#centerLabel').css('top',sh*0.30);
+
 
     $('.arrow').css('left', (window.innerWidth / 2 - (window.innerHeight) / 2) + 290 + 'px');
     $('.arrow').css('top', (window.innerHeight) / 2 - 260 + 'px');
