--- a/manual9.html
+++ b/manual9.html
@@ -132,7 +132,7 @@
     $min = 69;
     $step = ($max - $min) / ($numTicks - 1);
     stepWidth = 18;
-    initialTilt = 37;
+    initialTilt = 34;
     tickFile = "img/NewArranged/greenTick.png";
 
     yellowThreshold = 84;
@@ -218,7 +218,7 @@
                 "</div>");
 
             $("body").append(divArr[$i]);
-            $('#cont' + $i).attr('style', 'transform: rotate(' + ($i * stepWidth - initialTilt) + 'deg)');
+            $('#cont' + $i).attr('style', 'transform: rotate(' + ($i * stepWidth - initialTilt ) + 'deg)');
         }
     }
 
@@ -262,7 +262,7 @@
     //place the ticks always in the rigth place
     adaptiveTickMargin = Math.pow( $('#tacho').width(),0.5 ) * ($('#tacho').width()*0.0024);
     $('.tick1').css('padding-left', ( adaptiveTickMargin  ) + 'px');
-    //console.log($('#tacho').width());
+    console.log("tacho Width:" +$('#tacho').width());
     //console.log($('.tick1').css('padding-left'));
 
     numMargin = adaptiveTickMargin;
@@ -312,16 +312,20 @@
     $('#centerLabel').css('left',sw/2 - $('#centerLabel').width()/2);
     $('#centerLabel').css('top',sh*0.30);
 
+    $('.arrow').height($('#tacho').width()*0.4);
+    $('.arrow').width($('.arrow').height()*0.312);
+
     $('.arrow').css('left', (window.innerWidth / 2) - $('.arrow').width()/2 + 'px');      
-    $('.arrow').css('top', (window.innerHeight) / 2 - 260 + 'px');
+    $('.arrow').css('top', ((window.innerHeight)*0.18 ));
 
     $("#rot").css('opacity', 1);
 
-    //$("#rot").animateRotate(-120, -45, 7000, "linear", 0);
-    //$("#gelb").animateRotate(-120, -45, 7000, "linear", 100);
+    
+    $("#rot").animateRotate(-120, -45, 7000, "linear", 0);
+    $("#gelb").animateRotate(-120, -45, 7000, "linear", 100);
 
-    //setTimeout(runNext1, 7000);
-    //setTimeout(runNext2, 7000 * 2);
+    setTimeout(runNext1, 7000);
+    setTimeout(runNext2, 7000 * 2);
 
     function runNext1() {
         $("#rot").css('opacity', 0);
@@ -335,6 +339,7 @@
         $("#gruen").animateRotate(0, 120, 7000, "linear", 100);
 
     }
+    
 </script>
 
 </html>
